; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_symtab.c_fixup_psymbol_section.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_symtab.c_fixup_psymbol_section.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.partial_symbol = type { i32 }
%struct.objfile = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.partial_symbol* @fixup_psymbol_section(%struct.partial_symbol* %0, %struct.objfile* %1) #0 {
  %3 = alloca %struct.partial_symbol*, align 8
  %4 = alloca %struct.partial_symbol*, align 8
  %5 = alloca %struct.objfile*, align 8
  store %struct.partial_symbol* %0, %struct.partial_symbol** %4, align 8
  store %struct.objfile* %1, %struct.objfile** %5, align 8
  %6 = load %struct.partial_symbol*, %struct.partial_symbol** %4, align 8
  %7 = icmp ne %struct.partial_symbol* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %2
  store %struct.partial_symbol* null, %struct.partial_symbol** %3, align 8
  br label %21

9:                                                ; preds = %2
  %10 = load %struct.partial_symbol*, %struct.partial_symbol** %4, align 8
  %11 = call i64 @SYMBOL_BFD_SECTION(%struct.partial_symbol* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %9
  %14 = load %struct.partial_symbol*, %struct.partial_symbol** %4, align 8
  store %struct.partial_symbol* %14, %struct.partial_symbol** %3, align 8
  br label %21

15:                                               ; preds = %9
  %16 = load %struct.partial_symbol*, %struct.partial_symbol** %4, align 8
  %17 = getelementptr inbounds %struct.partial_symbol, %struct.partial_symbol* %16, i32 0, i32 0
  %18 = load %struct.objfile*, %struct.objfile** %5, align 8
  %19 = call i32 @fixup_section(i32* %17, %struct.objfile* %18)
  %20 = load %struct.partial_symbol*, %struct.partial_symbol** %4, align 8
  store %struct.partial_symbol* %20, %struct.partial_symbol** %3, align 8
  br label %21

21:                                               ; preds = %15, %13, %8
  %22 = load %struct.partial_symbol*, %struct.partial_symbol** %3, align 8
  ret %struct.partial_symbol* %22
}

declare dso_local i64 @SYMBOL_BFD_SECTION(%struct.partial_symbol*) #1

declare dso_local i32 @fixup_section(i32*, %struct.objfile*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
